# specter

./: .coverage  .env  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.ko.md  README.md  SKILLS.md  main.py  modify.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md  test_mcp_client.py  todo.md  수익-추후삭제.md
.claude/: mcp_servers.json  settings.json  settings.local.json
.claude/agents/: README.md  code-refactor-master.md  codebase-explorer.md  constitution-extractor.md  debug-helper.md  doc-updater.md  feature-checklist-author.md  featuremap-author.md  featuremap-checklist-author.md  git-hygiene.md  implementation-planner.md  integration-designer.md  library-researcher.md  local-ci.md  quality-gate.md  quality_gate.py  refactor-planner.md  spec-builder.md  tag-auditor.md  tdd-implementer.md  trust-validator.md  web-research-specialist.md
.claude/commands/: constitution_kor.md  fin.md  finq.md  ms.agent-verify.md  ms.amend.md  ms.analyze.md  ms.audit.md  ms.checklist.md  ms.clarify.md  ms.codex-checklist.md  ms.codex-verify.md  ms.constitution.md  ms.expand.md  ms.featuremap-checklist.md  ms.featuremap.md  ms.fin.md  ms.fix.md  ms.implement.md  ms.init.md  ms.merglease.md  ms.plan.md  ms.prd.md  ms.pre-specter.md  ms.pre-verify.md  ms.review-enhanced.md  ms.review.md  ms.specify.md  ms.specter.md  ms.sync.md  ms.tasks.md  ms.unlock.md  ms.up-docs.md  ms.update-docs.md  ms.verify.md
.claude/hooks/: constitution-injector.sh  notify.sh  tag-enforcer.ts
.claude/skills/: skill-rules.json
.devcontainer/: Dockerfile  Makefile  devcontainer.json  docker-compose.yml  setup-pm.sh
.github/workflows/: ci.yml
.mcp-servers/cli-bridge/: README.md  TROUBLESHOOTING.md  prompts.md  server.py  server_streaming.py  test_direct.py
.serena/: project.yml
.specify/design/: review-optimization-plan.md
.specify/memory/: constitution.md
backend/: AGENTS.md
docs/: CHANGELOG.md  DOCKER_README.md  PRD.md  SYSTEM_MAP.md  dev_daily.md  insights-report-2026-07-13.html  ms-workflow-improvement.md  test-speed-audit-cln.md  test-speed-audit-sab.md  test-speed-audit-slm.md  todo.md
docs/guides/: agents-guide.md  hooks-guide.md  living-docs-guide.md  skills-guide.md
docs/improvements/: 2026-07-03-skills-reinforcement-plan.md  2026-07-03-workflow-audit-and-plan.md
docs/insights/: report-2026-07-24.html
docs/migration/: existing-hooks-analysis.md  moai-integration-guide.md  moai-to-specter-consolidation.md  path-mapping-scan.md
docs/ops/: antigravity-write-flag.md  weekly-triage.md
docs/references/: moai-adk-hooks-analysis.md  moai-adk-living-docs-and-sub-agents-analysis.md  moai-adk-skills-analysis.md
docs/review/: codex-full-workflow-audit-2026-07-18.md  codex-workflow-review-2026-07-18.md
docs/src/: README.md
docs/templates/: audit-tier-policy.json  ci-standard-block.yml  constitution-template.md  spec-template.md
frontend/: AGENTS.md  compare.md  package.json
scripts/: check_tag_chain.py  patch-agy-mount.sh  specter_sync.py  specter_sync_manifest.json  validate_environment.py
scripts/specter/: check_feature_map_gate.py  check_tag_chain.py  classify_audit_tier.py  specter_sync.py  specter_sync_manifest.json
specs/001-moai-adk-fixes/: phase9-report.md  plan.md  quickstart.md  spec.md  tasks.md
src/lib/tag/: index.ts  (+2 more)
templates/: constitution-template.md
tests/: conftest.py  test_check_feature_map_gate.py  test_check_tag_chain.py  test_specter_sync.py
(+167 files in other folders)
