[project]
name = "specter"
version = "0.1.0"
description = "SPECTER: Specification-driven Engineering with Context, Traceability, Execution, and Review"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "SPECTER Team" }
]
keywords = ["specification", "traceability", "ai-coding", "specter"]

# First-party code (scripts/, tests/) is stdlib-only by design — the sync engine
# and pre-commit backstops must run anywhere without an install step.
dependencies = []

[dependency-groups]
dev = [
    # TRUST Validation: Test-First (≥85% coverage)
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",

    # TRUST Validation: Readable (complexity ≤10)
    "radon>=6.0.0",        # Cyclomatic complexity (McCabe)
    "pygount>=1.6.0",      # SLOC measurement (excluding comments)

    # TRUST Validation: Unified (type safety)
    "mypy>=1.11.0",        # Static type checking (strict mode)

    # Code quality tools (Ruff로 일원화 — lint + format)
    "ruff>=0.14.0",        # Linter + formatter (black/isort/flake8 대체)

    # Git hooks
    "pre-commit>=3.8.0",   # Git pre-commit automation
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.coverage.run]
source = ["backend", "scripts"]
omit = ["tests/*", "*/__pycache__/*", "*/test_*.py"]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85
